--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,21 @@ html {
 }
 
 body {
-  font-size: 1.6rem;
+  font-size: 1.8rem;
+  font-family: "Roboto", sans-serif;
+}
+
+.main-content {
+  min-height: 70vh;
+  background-color: #dfe4ea;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.page {
+  width: 120rem;
+  max-width: 90%;
+  margin: 0 auto;
 }
 
 a {
