--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -3,12 +3,15 @@
   outline: none;
   padding: 10px 20px;
   color: white;
-  background-color: #fa8231;
+  background-color: #ee5a24;
   border-radius: 5px;
-  transition: all 0.4s ease-in;
+  transition: all 0.3s ease-in;
+  cursor: pointer;
+  font-size: 1.8rem;
+  font-family: "Roboto", sans-serif;
   &:hover,
   &:focus,
   &:active {
-    background-color: #f7b731;
+    background-color: lighten(#ee5a24, 10%);
   }
 }
