SideContacts component added, StreamsList component added and styled

--- a/src/components/TheHeader/TheHeader.scss
+++ b/src/components/TheHeader/TheHeader.scss
@@ -1,6 +1,6 @@
 .header {
   padding: 2rem 0 2rem 0;
-  background: #1e272e;
+  background: #2f3542;
   color: white;
   display: flex;
   justify-content: center;
