--- a/src/components/TheFooter/TheFooter.scss
+++ b/src/components/TheFooter/TheFooter.scss
@@ -1,6 +1,6 @@
 .footer {
   padding: 2rem 0 3rem 0;
-  background: #1e272e;
+  background: #2f3542;
   color: white;
   display: flex;
   justify-content: center;
