--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -6,6 +6,7 @@
   background-color: #ee5a24;
   border-radius: 5px;
   transition: all 0.3s ease-in;
+  align-self: flex-start;
   cursor: pointer;
   font-size: 1.8rem;
   font-family: "Roboto", sans-serif;
